sync: new feature API Database

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,9 +27,9 @@
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto my-2">
             <a class="me-3 py-2 text-decoration-none text-light" style="font-size: 20px" href="/docs">Get started</a>
             <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px" href="/">Home</a>
-            <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px" href="templates/visualize">Visualize</a>
+            <!-- <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px" href="templates/visualize">Visualize</a> -->
             <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px"
-                href="https://github.com/gigihko/dsc-challange">Help</a>
+                href="https://github.com/gigihko/dsc-challange/tree/master">Code</a>
         </nav>
         <!-- <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
@@ -120,15 +120,14 @@
                     </div>
                     <div class="carousel-caption" style="align-self: start; padding-top: 20px ">
                         <b>
-                            <h1 style="font-size: 100px"> WorkFlow</h1>
+                            <h1 style="font-size: 100px"> Features</h1>
                         </b>
                         <br>
                         <div class="btn btn-block btn-lg" style="background-color: black; color: white; font-weight: bold;
                       font-size:30px;text-align: left; font-family: 'Franklin Gothic Book'">
-                            Enter a keyword of your choice <br>
-                            Enter the no of tweets you want to search <br>
-                            Voila! See instant Results! <br>
-                            Click on Generate to View Detailed Data Visualization.
+                            - Celansing API <br>
+                            - Sentiment API <br>
+                            - Get Database API <br>
                         </div>
                         <br><br>
                     </div>
