--- a/templates/visualize.html
+++ b/templates/visualize.html
@@ -27,9 +27,9 @@
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto my-2">
             <a class="me-3 py-2 text-decoration-none text-light" style="font-size: 20px" href="/docs">Get started</a>
             <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px" href="/">Home</a>
-            <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px" href="/visualize">Visualize</a>
+            <!-- <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px" href="/visualize">Visualize</a> -->
             <a class="me-3 py-2 text-light text-decoration-none" style="font-size: 20px"
-                href="https://github.com/gigihko/dsc-challange">Help</a>
+                href="https://github.com/gigihko/dsc-challange">Code</a>
         </nav>
         <!-- <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
