add: analysis & presentation file

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,12 +13,12 @@
     <script src="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script>
     <title>Binar Academy - Gold Challange</title>
     <!-- code for the navigation header bar-->
-    <header style="height: 80px" class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand" href="#">
+    <header style="height: 80px" class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap shadow">
+        <!-- <a class="navbar-brand" href="#">
             <img src="https://global-uploads.webflow.com/62fdaf934899cf5b43a00e1a/630452503bf80f5e2097fe6b_minimal-logo-binar-academy.svg"
                 alt="binar-logo" width="60" height="40">
-        </a>
-        <a class="navbar-brand" href="/">API for Cleansing Data and Sentiment Analysis</a>
+        </a> -->
+        <a class="navbar-brand ms-3" href="/">API for Cleansing Data and Sentiment Analysis</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -107,7 +107,7 @@
                         <b>
                             <h1 style="font-size: 30px"> How does this work? </h1>
                         </b>
-                        <a href="https://github.com/gigihko/dsc-challange" class="btn btn-primary btn-block btn-lg"
+                        <a href="https://github.com/gigihko/dsc-challange/tree/master" class="btn btn-primary btn-block btn-lg"
                             style="background-color: crimson; font-size: 10px"> Click Here to know more about this
                             project</a>
                         <br><br>
